--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@blocknote/core": "^0.10.1",
     "@blocknote/react": "^0.10.1",
     "@clerk/clerk-react": "^4.30.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
