--- a/package.json
+++ b/package.json
@@ -14,16 +14,20 @@
     "@blocknote/react": "^0.10.1",
     "@clerk/clerk-react": "^4.30.0",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-popover": "^1.0.7",
     "@radix-ui/react-slot": "^1.0.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
+    "convex": "^1.6.3",
     "lucide-react": "^0.295.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.21.0",
     "sass": "^1.69.5",
     "tailwind-merge": "^2.1.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "y-partykit": "^0.0.10",
+    "yjs": "^13.6.10"
   },
   "devDependencies": {
     "@types/node": "^20.10.4",
